<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_device" android:id="@id/action_backup_local" android:title="@string/backup_to_local" android:iconTint="?android:textColorSecondary" />
    <item android:icon="@drawable/ic_cloud" android:id="@id/action_backup_cloud" android:title="@string/backup_to_cloud" android:iconTint="?android:textColorSecondary" />
    <item android:icon="@drawable/ic_done_all" android:id="@id/action_backup_local_cloud" android:title="@string/backup_to_local_and_cloud" android:iconTint="?android:textColorSecondary" />
    <item android:icon="@drawable/ic_share" android:id="@id/action_share" android:title="@string/share_apk" android:iconTint="?android:textColorSecondary" />
    <item android:icon="@drawable/ic_delete" android:id="@id/action_delete" android:title="@string/delete" android:iconTint="@color/red" />
</menu>
