<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@id/grp_edit">
        <item android:icon="@drawable/ic_search" android:id="@id/action_search" android:title="@string/search" app:showAsAction="ifRoom" />
        <item android:icon="@drawable/ic_filter" android:id="@id/action_filter" android:title="@string/filter" app:showAsAction="ifRoom" />
        <item android:icon="@drawable/checkbox_blank_outline" android:id="@id/action_select_all" android:checked="true" android:title="@string/select_apps" android:checkable="true" app:showAsAction="always" />
        <item android:icon="@drawable/ic_app" android:id="@id/action_app_backup_settings" android:title="@string/app_backup_settings" app:showAsAction="never" />
        <item android:icon="@drawable/ic_settings" android:id="@id/action_settings" android:title="@string/settings" app:showAsAction="never" />
    </group>
</menu>
