<?xml version="1.0" encoding="utf-8"?>
<org.swiftapps.swiftbackup.views.SwiftSegmentedCardGroup android:orientation="vertical" android:id="@id/cloud_info_card_active_tag" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <org.swiftapps.swiftbackup.views.SwiftSegmentLinearLayout android:orientation="vertical" android:id="@id/cloud_tag_selector_segment" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/spacing_normal" android:paddingVertical="@dimen/spacing_normal">
        <TextView android:id="@id/text_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/cloud_backup_tag" style="@style/CardTitle" />
        <TextView android:id="@id/tv_info" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_low" android:text="@string/cloud_backup_tag_message" style="@style/Subtitle" />
        <include android:id="@id/dropdown_active_tag" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal" layout="@layout/common_dropdown_item" />
        <View android:id="@id/backup_info_divider" android:layout_marginVertical="@dimen/spacing_normal" style="@style/DividerThinNoMargins" />
        <androidx.constraintlayout.widget.ConstraintLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/backup_info_empty_state" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingVertical="@dimen/spacing_low">
            <ImageView android:id="@id/iv_cloud_upload" android:background="@drawable/circle" android:padding="10.0dp" android:layout_width="42.0dp" android:layout_height="42.0dp" android:src="@drawable/ic_cloud_upload" android:tintMode="src_in" android:backgroundTint="?colorBackgroundActivated" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:tint="?colorPrimary" />
            <TextView android:id="@id/tv_empty_backup_info_title" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/no_backups_with_active_tag" android:layout_marginStart="@dimen/spacing_normal" app:layout_constraintBottom_toTopOf="@id/tv_empty_backup_info_subtitle" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/iv_cloud_upload" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" style="@style/TextOverline.Large" />
            <TextView android:id="@id/tv_empty_backup_info_subtitle" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/no_backups_with_active_tag_message" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/tv_empty_backup_info_title" app:layout_constraintStart_toStartOf="@id/tv_empty_backup_info_title" app:layout_constraintTop_toBottomOf="@id/tv_empty_backup_info_title" style="@style/Subtitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/backup_info_container" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/tv_backups_tagged_with" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/backups_tagged_with" android:textAllCaps="true" style="@style/TextCaption" />
            <org.swiftapps.swiftbackup.views.QuickRecyclerView android:layout_gravity="center" android:orientation="horizontal" android:id="@id/backup_info_icons_normal_ui" android:visibility="gone" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_medium_more" android:columnWidth="@dimen/dash_shortcut_item_width" android:overScrollMode="never" android:paddingHorizontal="-8.0dp" />
            <androidx.recyclerview.widget.RecyclerView android:layout_gravity="center" android:id="@id/backup_info_icons_compact_ui" android:visibility="gone" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_medium_more" android:overScrollMode="never" android:paddingHorizontal="-8.0dp" />
            <com.google.android.material.button.MaterialButton android:id="@id/btn_delete_active_tag" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_medium_more" android:minHeight="56.0dp" android:text="@string/delete_active_tag" android:textAllCaps="false" style="@style/M3ButtonFilled.Error" />
        </LinearLayout>
    </org.swiftapps.swiftbackup.views.SwiftSegmentLinearLayout>
</org.swiftapps.swiftbackup.views.SwiftSegmentedCardGroup>
