<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:id="@id/folder_backup_dialog" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/spacing_normal" android:paddingEnd="@dimen/spacing_normal" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <include layout="@layout/bottom_dialog_drag_indicator" />
        <TextView android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_medium" android:text="@string/folder_backups_strategy" android:paddingVertical="@dimen/spacing_medium" style="@style/Title.Large" />
        <include android:id="@id/strategy_single" layout="@layout/folder_strategy_item" />
        <include android:id="@id/strategy_incremental" layout="@layout/folder_strategy_item" />
        <LinearLayout android:orientation="vertical" android:id="@id/locations_section" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal_more" android:text="@string/select_backup_locations" style="@style/Title.Large" />
            <org.swiftapps.swiftbackup.views.QuickRecyclerView android:id="@id/rv_locations" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal" />
        </LinearLayout>
        <com.google.android.material.button.MaterialButton android:id="@id/btn_action" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal_more" android:layout_marginBottom="@dimen/bottom_dialog_action_bottom_spacing" android:text="@string/backup" app:icon="@drawable/ic_backup" style="@style/M3ButtonFilled.Large" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
