<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:padding="@dimen/spacing_normal_more" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/iv_icon" android:layout_width="48.0dp" android:layout_height="48.0dp" android:src="@drawable/ic_encrypt" android:adjustViewBounds="true" android:layout_marginVertical="@dimen/spacing_medium" app:tint="?colorPrimary" />
        <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_medium" android:text="@string/add_old_password" style="@style/M3DialogTitle" />
        <include android:id="@id/til_old_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal_more" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_active_password_description" layout="@layout/set_password_edittext" />
        <com.google.android.material.button.MaterialButton android:layout_gravity="center_horizontal" android:id="@id/btn_save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal_more" android:text="@string/save" android:paddingStart="@dimen/spacing_larger" android:paddingEnd="@dimen/spacing_larger" style="@style/M3ButtonFilled.Large" />
        <com.google.android.material.button.MaterialButton android:textColor="?android:textColorSecondary" android:layout_gravity="center_horizontal" android:id="@id/btn_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:backgroundTint="@color/trans" app:rippleColor="?dividerColor" style="@style/M3ButtonFilled.Large" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
