<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/bottom_dialog_drag_indicator" />
    <TextView android:textSize="@dimen/title_largest" android:textColor="?android:textColorPrimary" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal" android:text="@string/share_logs" style="@style/Title" />
    <LinearLayout android:gravity="start|center" android:orientation="horizontal" android:id="@id/tv_swiftlogger" android:background="?selectableItemBackground" android:padding="@dimen/spacing_normal_more" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_medium_more">
        <TextView android:textSize="@dimen/title" android:id="@id/tv_swiftlogger_title" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/swiftlogger" android:layout_weight="1.0" android:textAlignment="viewStart" style="@style/Subtitle" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_chevron_right" android:importantForAccessibility="no" app:tint="?android:textColorSecondary" />
    </LinearLayout>
    <View android:layout_marginStart="@dimen/spacing_normal_more" android:layout_marginEnd="@dimen/spacing_normal_more" style="@style/DividerThinNoMargins" />
    <LinearLayout android:gravity="start|center" android:orientation="horizontal" android:id="@id/tv_swiftlogger_text_only" android:background="?selectableItemBackground" android:padding="@dimen/spacing_normal_more" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/title" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/share_swiftlogger_text_only" android:layout_weight="1.0" android:textAlignment="viewStart" style="@style/Subtitle" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_chevron_right" android:importantForAccessibility="no" app:tint="?android:textColorSecondary" />
    </LinearLayout>
</LinearLayout>
